--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <div class="hero-body">
       <img src="static/images/1_00.png" alt="DRAGE Framework Overview" style="max-width:100%; height:auto;"/>
       <h2 class="subtitle has-text-centered">
-        Overview of Semantic Intra-Modality Regularization (SIMR) method. This approach is implemented through vision-to-vision (v2v) and text-to-text (t2t) contrastive losses, adjusting embedding distances within each modality based on semantic distances between samples, ensuring that semantically similar samples maintain appropriate distances in the embedding space.      </h2>
+Overview of Semantic Intra-Modality Regularization (SIMR) method.This approach is implemented through vision-to-vision (v2v) and text-to-text (t2t) contrastive losses, adjusting embedding distances within each modality based on semantic distances between samples, ensuring semantically similar samples maintain appropriate distances in the embedding space.    </h2>
     </div>
   </div>
 </section>
