--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   <div class="container is-max-desktop">
     <div class="hero-body">
       <img src="static/images/1_00.png" alt="DRAGE Framework Overview" style="max-width:100%; height:auto;"/>
-      <h2 class="subtitle has-text-centered">
+      <h2 class="subtitle has-text-left">
 Overview of Semantic Intra-Modality Regularization (SIMR) method.This approach is implemented through vision-to-vision (v2v) and text-to-text (t2t) contrastive losses, adjusting embedding distances within each modality based on semantic distances between samples, ensuring semantically similar samples maintain appropriate distances in the embedding space.    </h2>
     </div>
   </div>
